--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,10 @@
 table {
-    width: 90vw;
-}
-th {
-    border: black 2px solid;
+    width: 95vw;
 }
 ul.no-bullets {
     list-style-type: none; /* Remove bullets */
 }
+/*styles the banner on the pages*/
 .banner {
     font-family: Arial, Helvetica, sans-serif;
     font-size: larger;
@@ -15,6 +13,7 @@ ul.no-bullets {
     padding: 10px;
     background-color: orange;
 }
+/*styles the navagation links*/
 a.navLink {
     display: inline-block;
     text-decoration: none;
@@ -28,8 +27,22 @@ a.navLink {
     box-shadow: 3px 3px 3px;
     border-radius: 10px;   
 }
+/*highlights the navagation link that your cursor is over*/
 a:hover {
     color:black;
     transform: scale(.85);
     cursor: pointer;
+}
+/*highlights the current webpage in the navagation list*/
+#coloredBox {
+    background-color: brown;
+    color: white;
+}
+/*Centers the dancing icecream at .\Projects\HappyIceCream*/
+#iceCream {
+    display: block;
+    max-width: 100vw;
+    max-height: 100vh;
+    margin-left: auto; 
+    margin-right: auto;
 }
