--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,22 @@ th {
 ul.no-bullets {
     list-style-type: none; /* Remove bullets */
 }
+h2 {
+    border-bottom: thin solid #0e2352;
+}
+.resume {
+    border: 1px solid #0e2352;
+    padding: 0 2vw;
+    width: 75%;
+    margin: 3vw auto;
+}
+.personalInfo {
+    background:#0e2352;
+    color: white;
+    text-align: center;
+    padding: .3vw 0 1vw 0;
+    margin: 0 -2vw;
+}
 /*styles the banner on the pages*/
 .banner {
     font-family: Arial, Helvetica, sans-serif;
