--- a/css/style.css
+++ b/css/style.css
@@ -1,124 +1,130 @@
 table {
-    width: 95vw;
+  width: 95vw;
 }
 
 th {
-    border: none;
+  border: none;
 }
 
 ul.no-bullets {
-    list-style-type: none; /* Remove bullets */
+  list-style-type: none; /* Remove bullets */
 }
-/*places a border below subheaders on resume*/
+/*places a border below sub-headers on resume*/
 h2 {
-    border-bottom: thin solid #0e2352;
+  border-bottom: thin solid #0e2352;
+  text-transform: uppercase;
 }
 /*places the resume in a box*/
 .resume {
-    border: 1px solid #0e2352;
-    padding: 0 2vw;
-    width: 75%;
-    margin: 3vw auto;
+  border: 1px solid #0e2352;
+  padding: 0 2vw;
+  width: 75%;
+  margin: 3vw auto;
 }
-/*formates the header of the resume*/
+/*formats the header of the resume*/
 .personalInfo {
-    background:#0e2352;
-    color: white;
-    text-align: center;
-    padding: .3vw 0 1vw 0;
-    margin: 0 -2vw;
+  background: #0e2352;
+  color: white;
+  text-align: center;
+  padding: 0.3vw 0 1vw 0;
+  margin: 0 -2vw;
 }
 
 /*styles the banner on the pages*/
 .banner {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: larger;
-    font-weight: 1000;
-    text-align: center;
-    padding: 10px;
-    background-color: orange;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: larger;
+  font-weight: 1000;
+  text-align: center;
+  padding: 10px;
+  background-color: orange;
 }
 
-.skillsTable,.educationTable {
-    width: 100%;
+.skillsTable,
+.educationTable {
+  width: 100%;
+}
+
+.leftBorder {
+    border-left: 1px solid black;
 }
 
 .topLeftAdjusted {
-    vertical-align: top;
-    width: 50%;
+  vertical-align: top;
+  width: 50%;
 }
 
 .topCenterAdjusted {
-    padding-left: 10%;
-    vertical-align: top;
-    width: 50%;
+  padding-left: 10%;
+  vertical-align: top;
+  width: 50%;
 }
 
 /*styles the navigation links*/
 a.navLink {
-    display: inline-block;
-    text-decoration: none;
-    margin: 0 2vw;
-    text-align: center;
-    vertical-align: middle;
-    width: 15vw;
-    height: 3vw;    
-    font: bold 2vw arial;
-    border: solid 2px red;
-    box-shadow: 3px 3px 3px;
-    border-radius: 10px;   
+  display: inline-block;
+  text-decoration: none;
+  margin: 0 2vw;
+  text-align: center;
+  vertical-align: middle;
+  width: 15vw;
+  height: 3vw;
+  font: bold 2vw arial;
+  border: solid 2px red;
+  box-shadow: 3px 3px 3px;
+  border-radius: 10px;
 }
 
-/*styles the navagation links*/
+/*styles the navigation links*/
 a.navLinkThree {
-    display: inline-block;
-    text-decoration: none;
-    margin: 0 2vw;
-    text-align: center;
-    vertical-align: middle;
-    width: 25vw;
-    height: 3vw;    
-    font: bold 2vw arial;
-    border: solid 2px red;
-    box-shadow: 3px 3px 3px;
-    border-radius: 10px;   
+  display: inline-block;
+  text-decoration: none;
+  margin: 0 2vw;
+  text-align: center;
+  vertical-align: middle;
+  width: 25vw;
+  height: 3vw;
+  font: bold 2vw arial;
+  border: solid 2px red;
+  box-shadow: 3px 3px 3px;
+  border-radius: 10px;
 }
 
-/*highlights the navagation link that your cursor is over*/
+/*highlights the navigation link that your cursor is over*/
 a:hover {
-    color:black;
-    transform: scale(.85);
-    cursor: pointer;
+  color: black;
+  transform: scale(0.85);
+  cursor: pointer;
 }
 
-/*highlights the current webpage in the navagation list*/
+/*highlights the current webpage in the navigation list*/
 .gray {
-    background-color: gray;
-    color: white;
+  background-color: gray;
+  color: white;
 }
 
 #coloredBox {
-    background-color: brown;
-    color: white;
+  background-color: brown;
+  color: white;
 }
 
-/*Centers the dancing icecream at .\Projects\HappyIceCream*/
+/*Centers the dancing ice-cream at .\Projects\HappyIceCream*/
 #iceCream {
-    display: block;
-    max-width: 100vw;
-    max-height: 100vh;
-    margin-left: auto; 
-    margin-right: auto;
+  display: block;
+  max-width: 100vw;
+  max-height: 100vh;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #magic8 {
-    text-align: center;
-    font-size: 10vh;
+  text-align: center;
+  font-size: 10vh;
 }
 
 #askAnother {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 25vw;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25vw;
 }
