adds target blank to links

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 body{
   background-size: 100%;
   background-image: url("/boat-6686952_1920.jpg");
+  /* 
+  https://pixabay.com/photos/boat-lake-mountains-snow-italy-6686952/ 
+  https://pixabay.com/service/license-summary/
+  */
 }
 
 table {
